--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@ nav button {
     margin-bottom: 40px;
 }
 
-#menu {
+.menu1 {
     color: #FFF;
     text-align: center;
     font-family: "David Libre";
@@ -97,7 +97,7 @@ nav button {
     border-radius: 15px 5px 15px 5px;
 }
 
-#bookatable {
+.bookatable1 {
     width: 104px;
     height: 24.469px;
     color: #FFF;
@@ -142,4 +142,132 @@ nav button {
     margin-top: 280px;
     width: 250px;
     height: 250px;
+}
+
+/* special dishes  */
+
+.specialDishes {
+    width: 1080px;
+    height: 1400px;
+    background-color: #f0f1f3;
+}
+
+.specialDishes h3 {
+    padding-top: 80px;
+    margin-top: 200px;
+    margin-bottom: 25px;
+    color: #000000;
+    text-align: center;
+    font-family: "David Libre";
+    font-size: 60px;
+    font-weight: 700;
+}
+
+.specialDishes p {
+    margin-top: 0px;
+    margin-bottom: 70px;
+    width: 376px;
+    height: 65px;
+    flex-shrink: 0;
+    color: #5C6574;
+    font-family: Inter;
+    font-size: 16px;
+    font-weight: 400;
+}
+
+.dishes {
+    display: flex;
+    margin: 0px 45px 20px 55px;
+    justify-content: space-around;
+}
+
+.dishesImg {
+    width: 207px;
+    height: 207px;
+}
+
+.dishesName {
+    margin-top: 36px;
+    margin-bottom: 20px;
+    color: #101A24;
+    text-align: center;
+    font-size: 20px;
+    font-weight: 700;
+}
+
+.dishesDescription {
+    margin-top: 0px;
+    margin-bottom: 0px;
+    width: 225px;
+    height: 70px;
+    color: #5C6574;
+    text-align: center;
+    font-family: Inter;
+    font-size: 15px;
+    font-weight: 400;
+}
+
+/* welcome section  */
+
+.welcome {
+    display: flex;
+    margin: 0px 80px 100px 70px;
+    justify-content: space-around;
+}
+
+.welcome img {
+    margin-top: 120px;
+    width: 600px;
+    height: 500px;
+}
+
+.welcomeDescription h3 {
+    margin-left: 10px;
+    margin-bottom: 30px;
+    width: 300px;
+    color: #101A24;
+    font-family: "David Libre";
+    font-size: 40px;
+    font-weight: 700;
+}
+
+.welcomeDescription p {
+    margin-left: 20px;
+    margin-top: 0px;
+    margin-bottom: 15px;
+    width: 500px;
+    height: 70px;
+    color: #5C6574;
+    font-family: Inter;
+    font-size: 16px;
+    font-weight: 400;
+}
+
+.menu2 {
+    margin-right: 20px;
+    margin-left: 20px;
+    color: #FFF;
+    text-align: center;
+    font-family: "David Libre";
+    font-size: 20px;
+    font-weight: 200;
+    width: 100px;
+    height: 40px;
+    background-color: #101A24;
+    border: none;
+    border-radius: 15px 5px 15px 5px;
+}
+
+.bookatable2 {
+    width: 104px;
+    height: 24.469px;
+    color: #FFF;
+    font-family: "David Libre";
+    font-size: 20px;
+    font-weight: 200;
+    width: 150px;
+    height: 40px;
+    background-color: #EA6D27;
+    border: none;
+    border-radius: 15px 5px 15px 5px;
 }
