--- a/style.css
+++ b/style.css
@@ -271,3 +271,102 @@ nav button {
     border: none;
     border-radius: 15px 5px 15px 5px;
 }
+
+/* expects chef section  */
+
+.expectsChef {
+    display: flex;
+    margin: 100px 150px 0px 155px;
+    justify-content: space-around;
+}
+
+.expectsChef img {
+    width: 450px;
+    height: 600px;
+   margin-left: -110px;
+}
+
+.chefDescription h3 {
+    margin-left: 20px;
+    margin-top: 100px;
+    margin-bottom: 18px;
+    width: 520px;
+    color: #101A24;
+    font-family: "David Libre";
+    font-size: 60px;
+    font-weight: 700;
+}
+
+.chefDescription p {
+    margin-left: 22px;
+    width: 376px;
+    height: 115px;
+    flex-shrink: 0;
+    color: #5C6574;
+    font-family: Inter;
+    font-size: 16px;
+    font-weight: 400;
+}
+
+.checkPoints {
+    display: flex;
+}
+
+.checkPoints1 img {
+    width: 23.802px;
+    height: 24px;
+    margin-left: 1px;
+}
+.checkPoints2 img {
+    width: 23.802px;
+    height: 24px;
+    margin-left: -120px;
+}
+.check{
+    margin-left: 20px;
+    margin-bottom: -50px;
+}
+.checkDescription2{
+    margin-top: -35px;
+    margin-left: -110px;
+}
+.checkDescription1{
+    margin-top: -35px;
+}
+.checkDescription1{
+    margin-left: 10px;
+}
+.chefSectionButton
+{
+    display: flex;
+    margin-top: 20px;
+}
+.menu3 {
+    margin-right: 20px;
+    margin-left: 20px;
+    color: #FFF;
+    text-align: center;
+    font-family: "David Libre";
+    font-size: 20px;
+    font-weight: 200;
+    width: 100px;
+    height: 40px;
+    background-color: #101A24;
+    border: none;
+    border-radius: 15px 5px 15px 5px;
+}
+
+.bookatable3 {
+    margin-left: 3px;
+    width: 104px;
+    height: 24.469px;
+    color: #FFF;
+    font-family: "David Libre";
+    font-size: 20px;
+    font-weight: 200;
+    width: 150px;
+    height: 40px;
+    background-color: #EA6D27;
+    border: none;
+    border-radius: 15px 5px 15px 5px;
+}
