--- a/style.css
+++ b/style.css
@@ -283,7 +283,7 @@ nav button {
 .expectsChef img {
     width: 450px;
     height: 600px;
-   margin-left: -110px;
+    margin-left: -110px;
 }
 
 .chefDescription h3 {
@@ -317,30 +317,36 @@ nav button {
     height: 24px;
     margin-left: 1px;
 }
+
 .checkPoints2 img {
     width: 23.802px;
     height: 24px;
     margin-left: -120px;
 }
-.check{
+
+.check {
     margin-left: 20px;
     margin-bottom: -50px;
 }
-.checkDescription2{
+
+.checkDescription2 {
     margin-top: -35px;
     margin-left: -110px;
 }
-.checkDescription1{
+
+.checkDescription1 {
     margin-top: -35px;
 }
-.checkDescription1{
+
+.checkDescription1 {
     margin-left: 10px;
 }
-.chefSectionButton
-{
+
+.chefSectionButton {
     display: flex;
     margin-top: 20px;
 }
+
 .menu3 {
     margin-right: 20px;
     margin-left: 20px;
@@ -369,4 +375,152 @@ nav button {
     background-color: #EA6D27;
     border: none;
     border-radius: 15px 5px 15px 5px;
+}
+
+/* happy customer section  */
+
+.happyCustomer {
+    width: 1080px;
+    height: 1200px;
+    background-color: #f0f1f3;
+    margin-top: 200px;
+}
+
+.happyCustomer h3 {
+    padding-top: 70px;
+    margin-bottom: 25px;
+    width: 645px;
+    color: #101A24;
+    font-family: "David Libre";
+    font-size: 60px;
+    font-weight: 700;
+}
+
+.happyCustomer p {
+    margin-bottom: 60px;
+    width: 376px;
+    height: 56px;
+    color: #5C6574;
+    text-align: center;
+    font-family: Inter;
+    font-size: 16px;
+    font-weight: 400;
+}
+
+.reviewImg {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.review {
+    margin-top: -30px;
+    background-color: #FFF;
+    width: 500px;
+    height: 350px;
+    border-radius: 80px 30px 80px 30px;
+}
+
+.star {
+    padding-top: 50px;
+    margin-left: 200px;
+}
+
+.review p {
+    margin-top: 30px;
+    margin-bottom: 25px;
+    width: 383px;
+    height: 155px;
+    color: #5C6574;
+    font-family: Inter;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 29px;
+
+}
+
+.review h5 {
+    margin-top: 0px;
+    margin-bottom: 5px;
+    color: #101A24;
+    text-align: center;
+    font-family: Inter;
+    font-size: 16px;
+    font-weight: 700;
+}
+
+.review h6 {
+    color: #5C6574;
+    text-align: center;
+    font-family: Inter;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 400;
+}
+
+.customerReviews {
+    margin-right: 10px;
+    margin-left: 10px;
+    display: flex;
+    justify-content: space-around;
+}
+
+.dot {
+    margin-top: 120px;
+    margin-bottom: 150px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+/* subscribe section  */
+
+.subscribeSec {
+    background-image: url(images/subscribing-image.png);
+    width: 950px;
+    height: 400px;
+    border-radius: 50px;
+}
+
+.subscribeSec h3 {
+    width: 804px;
+    color: #FFF;
+    text-align: center;
+    font-family: "David Libre";
+    font-size: 50px;
+    font-weight: 700;
+    line-height: 58px;
+}
+
+.subsText {
+    display: flex;
+}
+
+.email {
+    margin-top: 30px;
+    margin-left: 200px;
+    width: 600px;
+    height: 70px;
+    border-radius: 20px;
+    color: #000000;
+    font-family: Inter;
+    font-size: 18px;
+    font-weight: 400;
+    border: none;
+    padding-left: 30px;
+}
+
+.subscribe {
+    margin-top: 40px;
+    margin-left: -310px;
+    width: 130px;
+    height: 50px;
+    border-radius: 10px;
+    background: #EA6D27;
+    color: #FFF;
+    text-align: center;
+    font-family: Inter;
+    font-size: 16px;
+    font-weight: 700;
+    border: none;
 }
